--- a/debian/rules
+++ b/debian/rules
@@ -31,7 +31,6 @@ build-stamp:
 clean:
 	dh_testdir
 	dh_testroot
-	rm -f build-stamp
 
 	[ ! -f Makefile ] || $(MAKE) distclean
 
@@ -40,7 +39,7 @@ clean:
 install: build
 	dh_testdir
 	dh_testroot
-	dh_clean -k
+	dh_prep
 	dh_installdirs
 
 	$(MAKE) DESTDIR=$(CURDIR)/debian/tmp install
@@ -55,7 +54,6 @@ ifneq (,$(filter docs,$(DEB_BUILD_OPTIONS)))
 endif
 	mkdir -p debian/mcpp/usr/bin
 	install -m755 debian/tmp/usr/bin/mcpp debian/mcpp/usr/bin
-#	dh_installmenu
 ifneq (,$(filter docs,$(DEB_BUILD_OPTIONS)))
 	dh_installchangelogs
 endif
